[package]
name = "simple-csv-tx-engine"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.58"
csv = "1.1.6"
derive_more = "0.99.17"
fxhash = "0.2.1"
itertools = "0.10.3"
rust_decimal = { version = "1.25.0", features = ["serde-with-str"] }
serde = { version = "1.0.139", features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
criterion = "0.3.6"
rand = { version = "0.8.5", features = ["small_rng"] }

[[bench]]
name = "large_data"
harness = false
